# solrpy

./: .gitignore  .hgignore  .travis.yml  DEVELOP.txt  LICENSE  MANIFEST.in  README  README.md  README.txt  bug.md  buildout.cfg  ez_setup.py  pyproject.toml  setup.py  solr.py
.github/workflows/: docs.yml  tests.yml
benchmarks/: bench.py  profile_select.py
docker/: docker-compose-cloud.yml
docs/: Makefile  changelog.rst  conf.py  index.rst  make.bat  overview.rst  quickstart.rst  reference.rst  version_detection.rst
docs/_templates/: layout.html
python2/tests/: test_all.py
python3/solr/: core.py  paginator.py
python3/tests/: test_all.py
scripts/: test_all_versions.sh  test_cloud_versions.sh
solr/: __init__.py  async_companions.py  async_solr.py  cloud.py  compat.py  core.py  exceptions.py  extract.py  facet.py  field.py  knn.py  mlt.py  paginator.py  parsers.py  response.py  schema.py  sort.py  stream.py  suggest.py  transport.py  utils.py  zookeeper.py
tests/: conftest.py  schema.xml  test_all.py  test_async.py  test_async_companions.py  test_async_pydantic.py  test_async_stream.py  test_auth.py  test_builders.py  test_cloud.py  test_compat.py  test_connection.py  test_crud.py  test_cursor.py  test_extract.py  test_facets.py  test_grouping.py  test_httpx.py  test_json_update.py  test_knn.py  test_lazy_version.py  test_parsers.py  test_pickle.py  test_pydantic.py  test_query.py  test_schema.py  test_serialize.py  test_solr4.py  test_spellcheck.py  test_stream.py  test_suggest.py  test_transport.py  test_unified.py  test_version.py
