[tool.poetry]
name = "solrpy"
version = "1.0.9"
description = "Client for the Solr search service"
license = "Apache-2.0"
readme = "README.md"
packages = [{ include = "solr" }]
authors = ["Ed Summers <ehs@pobox.com>"]
maintainers = ["Andrew Ji-ho Lee <search5@gmail.com>"]
repository = "https://github.com/search5/solrpy"
homepage = "https://search5.github.io/solrpy/"
keywords = ["solr", "search", "lucene", "client"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
exclude = ["tests/", "docs/"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
mypy = "^1.19.1"

[tool.poetry.group.docs.dependencies]
sphinx = "^7.0"
sphinx-rtd-theme = "^3.0"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
